Update styles - Fix margin-bottom of skill section title. - Increase ling-height of description section. - Fix position of swiper nav. - Increase width of section. - Update clipPath animation of Front section.

--- a/src/components/Section.module.scss
+++ b/src/components/Section.module.scss
@@ -60,6 +60,7 @@
           width: 7.5vw;
           display: flex;
           justify-content: center;
+          transform: translateY(-25%);
 
           .swiper__arrow {
             cursor: pointer;
@@ -105,7 +106,7 @@
       }
       border-radius: 15px;
       height: fit-content;
-      width: 80vw;
+      width: 90vw;
       max-width: 900px;
       min-width: 200px;
       text-align: start;
@@ -164,11 +165,16 @@
         .description__text {
           word-break: keep-all;
           white-space: pre-line;
-          line-height: 27px;
+          line-height: 35px;
         }
       }
 
       &.skills {
+        .section__title {
+          margin: {
+            bottom: 40px;
+          }
+        }
         .skill-icons {
           display: flex;
           flex-wrap: wrap;
